# poc_qt_websockets

./: README.md
app_qt/: CMakeLists.txt  WebSocketDemo.pro  conanfile.txt  install.sh  main.cpp  main.qml
app_qt/src/: main.cpp  resources.qrc
app_qt/src/qml/: main.qml
app_qt/src/qml/components/: StatusControl.qml  StatusControlArray.qml
app_qt/src/state/: Atom.cpp  Atom.h  AtomObserverWrapper.cpp  AtomObserverWrapper.h  DerivedAtom.cpp  DerivedAtom.h  IAtomObserver.h
app_qt/src/websockets/: WebSocketAction.cpp  WebSocketAction.h  WebSocketCmComs.cpp  WebSocketCmComs.h  WebSocketPubSub.cpp  WebSocketPubSub.h  WebSocketTopics.h
app_web/: package-lock.json  package.json  ws_script.js
app_web/src/app/: layout.tsx  page.tsx
app_web/src/app/api/websocket/: route.ts
app_web/src/app/counter/: page.tsx
app_web/src/app/example/: page.tsx
app_web/src/app/history/: page.tsx
app_web/src/app/ws/: page.tsx
app_web/src/components/: Button.tsx  Counter.tsx  Dropdown.tsx  GuiCommands.tsx  NavBar.tsx
app_web/src/libs/websocket/: WebSocketActions.ts  WebSocketBroker.ts  WebSocketClient.ts  WebSocketConf.ts  WebSocketContext.tsx  WebSocketTopic.ts  WebSocketTopics.ts  useWebSocket.ts
ws_server_cpp/: .env  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  generate_cert.sh  install.sh  start.sh
ws_server_cpp/app/: compile.sh  docker-entrypoint.sh  install.sh
ws_server_cpp/src/: main.cpp  ws_server_cpp.pro
ws_server_cpp/src/websockets/: WebSocketBroker.cpp  WebSocketBroker.h
